# cppkart

./: .gitignore  CMakeLists.txt  DC_full_rebuild.sh  build_and_run.sh  full_rebuild.sh  readme.md
assets/alien_moon_skybox/source/: scene.gltf
assets/big_sq_map/: BIG_SQ_MAP.mtl
assets/dale_aristocrat_vehicle/source/: Dale Aristocrat PS1.gltf
assets/ps1_gt_car/source/: Dale Aristocrat PS1.gltf
assets/road_barrier_01/: road_barrier_01.mtl
assets/skybox_01/: debug_box.mtl  sk.mtl
assets/skybox_02/: skybox_night_02.mtl
assets/square_island/: Square_island.mtl  ai_splines.txt
assets/square_island/chunks/: chunk_0000.txt  chunk_0001.txt  chunk_0002.txt  chunk_0003.txt  chunk_0004.txt  chunk_0005.txt  chunk_0006.txt  chunk_0007.txt  chunk_0008.txt  chunk_0009.txt  chunk_0010.txt  chunk_0011.txt  chunk_0012.txt  chunk_0013.txt  chunk_0014.txt  chunk_0015.txt  chunk_0016.txt  chunk_0017.txt  chunk_0018.txt  chunk_0019.txt  chunk_0020.txt  chunk_0021.txt  chunk_0022.txt  chunk_0023.txt  chunk_0024.txt  chunk_0025.txt  chunk_0026.txt  chunk_0027.txt  chunk_0028.txt  chunk_0029.txt  chunk_0030.txt  chunk_0031.txt  chunk_0032.txt  chunk_0033.txt  chunk_0034.txt  chunk_0035.txt  chunk_0036.txt  chunk_0037.txt  chunk_0038.txt  chunk_0039.txt  (+201 more)
docs/: Debugging.md  Implementation_Notes.md  Mem-Leak.md
scripts/: build_and_run.sh  generate.sh
src/: main.cpp
src/controllers/: VehicleInputAdapter.cpp  VehicleInputAdapter.h  VehicleInputController.cpp  VehicleInputController.h
src/core/gl/: Camera.cpp  Camera.h  EBO.cpp  Geometry.cpp  Geometry.hpp  Texture.cpp  Texture.h  VAO.cpp  VBO.cpp  shaderClass.cpp
src/core/loaders/: ChunkedMapLoader.hpp  ObjModel.cpp  ObjModel.hpp
src/data_structs/: TSQueue.cpp
src/engine/: SimulationWorld.cpp  SimulationWorld.hpp
src/engine/objects/: SimulationObject.cpp  SimulationObject.hpp  VehicleObject.cpp  VehicleObject.hpp
src/engine/physics/: PhysicsWorldSingleton.h  StaticTriangleMeshPhysics.cpp  StaticTriangleMeshPhysics.hpp  VehiclePhysics.cpp  VehiclePhysics.hpp
src/engine/rendering/: GLRenderer.cpp  GLRenderer.hpp  GameRenderer.cpp  GameRenderer.hpp  ObjectRenderer.cpp  ObjectRenderer.hpp  RenderRsrcManager.cpp  RenderRsrcManager.hpp
src/engine/state/: GameInputState.hpp
src/engine_core/: PhysicsThread.cpp  PhysicsThread.h  XJZoomEngine.cpp  XJZoomEngine.h
src/engine_core/bullet_models/: LowAbsVehicle.cpp  LowAbsVehicle.h  SolidShapePhysics.cpp  SolidShapePhysics.h  StaticTriangleMeshPhysics.cpp  TerrainPhysics.cpp  TerrainPhysics.h  VehiclePhysics.cpp  VehiclePhysics.h
src/engine_core/entities/: SolidEntity.cpp  SolidEntity.h  VehicleEntity.cpp  VehicleEntity.h
src/engine_core/geometries/: RenderableGeometry.cpp  RenderableGeometry.h
src/engine_core/loaders/: ObjModel.cpp  ObjModel.h
src/engine_core/managers/: PhysicsChunkManager.cpp  PhysicsChunkManager.h  SceneManager.cpp  SceneManager.h
src/engine_core/renderers/: TerrainRenderer.cpp  TerrainRenderer.h
src/engine_core/shared_resources/: DebugDrawQueue.h  SharedPhysicsResource.cpp  SharedPhysicsResource.h
src/engine_core/singletons/: PhysicsWorldSingleton.cpp  PhysicsWorldSingleton.h
src/game/: DemoGame.cpp  DemoGame.hpp  GameRenderer.cpp  GameRenderer.hpp  GameWindow.cpp  GameWindow.hpp  JXGame.cpp  JXGame.hpp
src/game/debug/: GameDebugHelper.cpp  GameDebugHelper.hpp
src/game/scenes/: GameScene.cpp  GameScene.hpp
src/game/shader/: default.frag  default.vert  default_normal.frag
src/game/state/: GameInput.cpp  GameInput.hpp
src/glad/src/: glad.c
src/jx_engine/component/: AISplineComponent.cpp  AISplineComponent.hpp  AIVehicleComponent.cpp  AIVehicleComponent.hpp  EComponent.cpp  EComponent.hpp  MovableObjectComponent.cpp  MovableObjectComponent.hpp  PlayerVehicleComponent.cpp  PlayerVehicleComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RenderCylinderComponent.cpp  RenderCylinderComponent.hpp  TerrainChunksComponent.cpp  TerrainChunksComponent.hpp  VehicleControlComponent.cpp  VehicleControlComponent.hpp  VehicleRenderComponent.cpp  VehicleRenderComponent.hpp
src/jx_engine/core/: Scene.hpp  SceneManager.cpp  SceneManager.hpp  ThreadPool.cpp  ThreadPool.hpp
src/jx_engine/entity/: ECManager.cpp  ECManager.hpp  Entity.cpp  Entity.hpp
src/jx_engine/event/: Event.hpp
src/jx_engine/gl/: GameGLRenderer.cpp  GameGLRenderer.hpp
src/jx_engine/import/: GLTFModel.cpp  GLTFModel.hpp  ObjModel.cpp  ObjModel.hpp  PhysChunkedMapLoader.cpp  PhysChunkedMapLoader.hpp
src/jx_engine/io/: GameInput.cpp  GameInput.hpp
src/jx_engine/logs/: Logger.cpp  Logger.hpp
src/jx_engine/physics/: BulletDebugDrawer.cpp  DynamicConvexHullMeshPhysics.cpp  DynamicConvexHullMeshPhysics.hpp  PhysicsWorldSingleton.cpp  PhysicsWorldSingleton.h  StaticTriangleMeshPhysics.cpp  StaticTriangleMeshPhysics.hpp  VehiclePhysics.cpp  VehiclePhysics.hpp
src/jx_engine/render/: GameGLRenderer.cpp  GameGLRenderer.hpp  RenderRsrcManager.cpp  RenderRsrcManager.hpp
src/jx_engine/system/: MapChunkSystem.cpp  MapChunkSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  System.cpp  System.hpp  VehicleRenderSystem.cpp  VehicleRenderSystem.hpp
src/libs/fastgltf/: base64.hpp  core.hpp  glm_element_traits.hpp  math.hpp  tools.hpp  types.hpp  util.hpp
src/libs/stb/: stb.cpp
src/rendering/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  FrustumCull.cpp  FrustumCull.h  VBO.cpp  VBO.h
src/rendering/shader/: default.frag  default.vert
src/ressources/: box_1.mtl  chunk_map.txt  errorlog  first_car.gltf  first_car.mtl
src/ressources/DE_Aztec/: DE_AZTEC.mtl
src/ressources/DE_MAP0/: MAPOI.mtl
src/ressources/DE_Map1/: Landscape01.mtl
src/ressources/volga/: volga.mtl
src/terrain_gen/: MapChunker.cpp  MapChunker.h
src/z_old_engine_core/: PhysicsThread.cpp  XJZoomEngine.cpp
src/z_old_engine_core/bullet_models/: StaticTriangleMeshPhysics.cpp  StaticTriangleMeshPhysics.h  TerrainPhysics.cpp  VehiclePhysics.h
src/z_old_engine_core/entities/: SolidEntity.h  VehicleEntity.cpp  VehicleEntity.h
src/z_old_engine_core/geometries/: BulletDebugDrawer.cpp  RenderableGeometry.cpp  (+1 more)
(+24 files in other folders)
